--- a/estilos/stylo.css
+++ b/estilos/stylo.css
@@ -27,9 +27,21 @@ section#login{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 
     background-color: white;
     width: 250px;
     height: 500px;
     border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+}
+section#login div#imagem{
+    display: block;
+    background: #5f2c82 url(../imagens/img_telalogin.jpg) no-repeat;
+    height: 200px;
+    background-size: cover;
+}
+section#login div#formulario{
+    display: block;
+    padding: 10px;
 }
