--- a/estilos/stylo.css
+++ b/estilos/stylo.css
@@ -28,6 +28,8 @@ section#login{
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
+    transition: width .3s,height .3s;
+    transition-timing-function: ease;
 
     background-color: white;
     width: 250px;
@@ -43,5 +45,5 @@ section#login div#imagem{
 }
 section#login div#formulario{
     display: block;
-    padding: 10px;
+    padding: 20px;
 }
