--- a/estilos/stylo.css
+++ b/estilos/stylo.css
@@ -6,29 +6,33 @@
 - Branco
 - Preto 
 */
-*{
+* {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
-body,html{
+
+body,
+html {
     background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
 }
-main{
+
+main {
     position: relative;
     height: 100vh;
     width: 100vw;
 }
-section#login{
+
+section#login {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
-    transition: width .3s,height .3s;
+    transition: width .3s, height .3s;
     transition-timing-function: ease;
 
     background-color: white;
@@ -37,13 +41,24 @@ section#login{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 }
-section#login div#imagem{
+
+section#login div#imagem {
     display: block;
     background: #5f2c82 url(../imagens/img_telalogin.jpg) no-repeat;
     height: 200px;
     background-size: cover;
 }
-section#login div#formulario{
+
+section#login div#formulario {
     display: block;
     padding: 20px;
+}
+
+div#formulario>h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario>p {
+    font-size: 1em;
 }
