--- a/estilos/stylo.css
+++ b/estilos/stylo.css
@@ -36,7 +36,7 @@ section#login {
     transition-timing-function: ease;
 
     background-color: white;
-    width: 250px;
+    width: 280px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
@@ -62,6 +62,20 @@ div#formulario>h1 {
 div#formulario>p {
     font-size: 1em;
 }
+form > div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+div.campo > label{
+    display: none;
+}
+div.campo > span{
+    color:white
+}
 form > input[type=submit] {
     height: 40px;
     display: block;
@@ -76,3 +90,14 @@ form > input[type=submit] {
 form > input[type=submit]:hover{
     background-color: #105e5b;
 }
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 50%;
+    text-decoration: none;
+    margin-top: 10px;
+
+}
+
