--- a/estilo/mediaquery.css
+++ b/estilo/mediaquery.css
@@ -19,6 +19,20 @@
         float: right;
         width: 70%;
     }
+    div#termos>p {
+        background-size: cover;
+        font-size: 0.8em;
+        color: white;
+        margin-left: 60px;
+        margin-top: -65px;
+        padding-left: 150px;
+    }
+    
+    div#termos > p > a {
+        text-decoration: none;
+        color: white;
+        font-weight: bolder;
+    }
 }
 
 @media screen and (min-width:1025px) {
@@ -48,5 +62,20 @@
 
     div#formulario>p {
         font-size: 1.2em;
+    }
+    div#termos>p {
+        background-size: cover;
+        font-size: 1em;
+        color: rgb(29, 27, 27);
+        margin-left: 750px;
+        margin-top: -65px;
+        padding-left: 150px;
+        
+    }
+    
+    div#termos > p > a {
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        font-weight: bolder;
     }
 }
