--- a/estilos/stylo.css
+++ b/estilos/stylo.css
@@ -62,7 +62,8 @@ div#formulario>h1 {
 div#formulario>p {
     font-size: 1em;
 }
-form > div.campo{
+
+form>div.campo {
     background-color: #5f2c82;
     display: block;
     width: 100%;
@@ -70,13 +71,16 @@ form > div.campo{
     border-radius: 5px;
     margin: 5px 0px;
 }
-div.campo > label{
+
+div.campo>label {
     display: none;
 }
-div.campo > span{
-    color:white
+
+div.campo>span {
+    color: white
 }
-form > input[type=submit] {
+
+form>input[type=submit] {
     height: 40px;
     display: block;
     font-size: 1em;
@@ -87,10 +91,12 @@ form > input[type=submit] {
     border-radius: 5px;
     cursor: pointer;
 }
-form > input[type=submit]:hover{
+
+form>input[type=submit]:hover {
     background-color: #105e5b;
 }
-form > a.botao{
+
+form>a.botao {
     display: block;
     text-align: center;
     font-size: 1em;
@@ -101,3 +107,17 @@ form > a.botao{
 
 }
 
+div#termos>p {
+    background-size: cover;
+    font-size: 0.8em;
+    color: white;
+    margin-left: 60px;
+    margin-top: -65px;
+    padding-left: 150px;
+}
+
+div#termos > p > a {
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+}
