--- a/estilos/stylo.css
+++ b/estilos/stylo.css
@@ -85,7 +85,7 @@ div.campo>span {
 }
 div.campo > input{
     border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.377);
+    border: 2px solid #5f2c82;
     font-size: 1em;
     width: calc(100% - 45px);
     transform: translateY(-10px);
