--- a/estilo/mediaquery.css
+++ b/estilo/mediaquery.css
@@ -42,7 +42,9 @@
     }
 
     section#login {
-        width: 900px
+        width: 900px;
+        height: 350px;
+        
     }
 
     section#login>div#imagem {
